updated actions endpoint
